--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "devDependencies": {
     "@types/nodemailer": "^6.4.8",
     "autoprefixer": "^10.4.14",
+    "csv-loader": "^3.0.5",
     "postcss": "^8.4.23",
     "tailwindcss": "^3.3.2"
   }
