--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-dom": "18.2.4",
     "@types/react-slick": "^0.23.10",
     "axios": "^1.4.0",
+    "dotenv": "^16.0.3",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
     "googleapis": "^118.0.0",
